@@ -1,0 +1,1 @@
+./mosh test/srfi-misc.scm 2>&1|grep who|cut -d ' ' -f6
